; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-strxcpyx.c_test_strpcpyl.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-strxcpyx.c_test_strpcpyl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"waldo\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c" test\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c" waldo. \00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"Banana\00", align 1
@.str.4 = private unnamed_addr constant [25 x i8] c"waldo test waldo. Banana\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_strpcpyl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_strpcpyl() #0 {
  %1 = alloca [25 x i8], align 16
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = getelementptr inbounds [25 x i8], [25 x i8]* %1, i64 0, i64 0
  store i8* %4, i8** %2, align 8
  store i64 25, i64* %3, align 8
  %5 = load i64, i64* %3, align 8
  %6 = call i64 (i8**, i64, i8*, i8*, ...) @strpcpyl(i8** %2, i64 %5, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i8* null)
  store i64 %6, i64* %3, align 8
  %7 = load i64, i64* %3, align 8
  %8 = call i64 (i8**, i64, i8*, i8*, ...) @strpcpyl(i8** %2, i64 %7, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0), i8* null)
  store i64 %8, i64* %3, align 8
  %9 = getelementptr inbounds [25 x i8], [25 x i8]* %1, i64 0, i64 0
  %10 = call i32 @streq(i8* %9, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.4, i64 0, i64 0))
  %11 = call i32 @assert_se(i32 %10)
  %12 = load i64, i64* %3, align 8
  %13 = icmp eq i64 %12, 1
  %14 = zext i1 %13 to i32
  %15 = call i32 @assert_se(i32 %14)
  ret void
}

declare dso_local i64 @strpcpyl(i8**, i64, i8*, i8*, ...) #1

declare dso_local i32 @assert_se(i32) #1

declare dso_local i32 @streq(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
